--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 
     <display-name>web</display-name>
 
+    <listener>
+      <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+    </listener>
+
     <!--
             There are three means to configure Wickets configuration mode and they 
             are tested in the order given.
