--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,42 @@
 	</licenses>
 	
         <properties>
-            <wicket.version>6.15.0</wicket.version>
-            <jetty.version>7.6.13.v20130916</jetty.version>
-            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-            <!-- allowed values: R7, 1.0, 1.5, 2.0 or none -->
-            <wtp.version>none</wtp.version>
+            <wicket.version>6.15.0</wicket.version>            
+            <wildfly.version>8.0.0.Final</wildfly.version>  
+            <jboss.spec.version>3.0.2.Final</jboss.spec.version>          
+            
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>            
+                        
+            <wildfly.embedded.dir>${project.basedir}/target/wildfly</wildfly.embedded.dir>
+            <jboss.home>${wildfly.embedded.dir}/wildfly-${wildfly.version}</jboss.home>            
 	</properties>
+        
+        <dependencyManagement>
+           <dependencies>
+                <dependency>
+                    <groupId>org.jboss.arquillian</groupId>
+                    <artifactId>arquillian-bom</artifactId>
+                    <version>1.1.4.Final</version>
+                    <scope>import</scope>
+                    <type>pom</type>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.spec</groupId>
+                    <artifactId>jboss-javaee-web-6.0</artifactId>
+                    <version>${jboss.spec.version}</version>
+                    <type>pom</type>
+                    <scope>import</scope>
+                </dependency>
+                <!-- Required by jboss-javaee-6.0:3.0.2.Final (https://issues.jboss.org/browse/JBBUILD-708) -->
+                <dependency>
+                    <groupId>xalan</groupId>
+                    <artifactId>xalan</artifactId>
+                    <version>2.7.1</version>
+                    <scope>provided</scope>
+                </dependency>                
+           </dependencies>
+        </dependencyManagement>
 	
         <dependencies>
             <!--  WICKET DEPENDENCIES -->
@@ -51,19 +81,38 @@
                 <artifactId>wicket-core</artifactId>
                 <version>${wicket.version}</version>
             </dependency>
-            <!-- OPTIONAL DEPENDENCY
+            <dependency>
+              <groupId>org.apache.wicket</groupId>
+              <artifactId>wicket-cdi</artifactId>
+              <version>${wicket.version}</version>
+            </dependency>             
             <dependency>
                 <groupId>org.apache.wicket</groupId>
                 <artifactId>wicket-extensions</artifactId>
                 <version>${wicket.version}</version>
-            </dependency>
-            -->
+            </dependency>   
+            
             <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-web-api</artifactId>
-                <version>7.0</version>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-web-6.0</artifactId>
+                <version>${jboss.spec.version}</version>                
+                <type>pom</type>
                 <scope>provided</scope>
-            </dependency>                        
+            </dependency>                     
+            
+            <!-- Import the CDI API. -->
+            <dependency>
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>                
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- Import the Common Annotations API (JSR-250). -->
+            <dependency>
+                <groupId>org.jboss.spec.javax.annotation</groupId>
+                <artifactId>jboss-annotations-api_1.1_spec</artifactId>                
+                <scope>provided</scope>
+            </dependency>                                   
 
             <!-- LOGGING DEPENDENCIES - LOG4J -->
             <dependency>
@@ -84,14 +133,36 @@
                 <version>4.11</version>
                 <scope>test</scope>
             </dependency>
-
-            <!--  JETTY DEPENDENCIES FOR TESTING  -->
             <dependency>
-                <groupId>org.eclipse.jetty.aggregate</groupId>
-                <artifactId>jetty-all-server</artifactId>
-                <version>${jetty.version}</version>
-                <scope>provided</scope>
+              <groupId>org.jboss.arquillian.junit</groupId>
+              <artifactId>arquillian-junit-container</artifactId>
+              <version>1.1.4.Final</version>
+              <scope>test</scope>              
             </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-embedded</artifactId>
+                <version>${wildfly.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.shrinkwrap.resolver</groupId>
+              <artifactId>shrinkwrap-resolver-api</artifactId>
+              <version>2.1.0</version>
+              <scope>test</scope>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.shrinkwrap.resolver</groupId>
+              <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+              <version>2.1.0</version>
+              <scope>test</scope>
+            </dependency>
+            <dependency>
+              <groupId>org.jboss.shrinkwrap.resolver</groupId>
+              <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+              <version>2.1.0</version>
+              <scope>test</scope>
+            </dependency>           
 	</dependencies>
 	<build>
             <resources>
@@ -139,36 +210,43 @@
                         <showWarnings>true</showWarnings>
                         <showDeprecation>true</showDeprecation>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty-maven-plugin</artifactId>
-                    <version>${jetty.version}</version>
-                    <configuration>
-                        <connectors>
-                            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                                <port>8080</port>
-                                <maxIdleTime>3600000</maxIdleTime>
-                            </connector>
-                            <connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
-                                <port>8443</port>
-                                <maxIdleTime>3600000</maxIdleTime>
-                                <keystore>${project.build.directory}/test-classes/keystore</keystore>
-                                <password>wicket</password>
-                                <keyPassword>wicket</keyPassword>
-                            </connector>
-                        </connectors>
-                    </configuration>
-                </plugin>
+                </plugin>                
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-eclipse-plugin</artifactId>
-                    <version>2.9</version>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
                     <configuration>
-                        <downloadSources>true</downloadSources>
-                        <wtpversion>${wtp.version}</wtpversion>
+                        <systemProperties>
+                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                            <jboss.home>${jboss.home}</jboss.home>
+                        </systemProperties>
                     </configuration>
                 </plugin>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-dependency-plugin</artifactId>
+                  <executions>
+                      <execution>
+                          <id>unpack</id>
+                          <phase>process-test-resources</phase>
+                          <goals>
+                              <goal>unpack</goal>
+                          </goals>
+                          <configuration>
+                              <artifactItems>
+                                  <artifactItem>
+                                      <groupId>org.wildfly</groupId>
+                                      <artifactId>wildfly-dist</artifactId>
+                                      <version>${wildfly.version}</version>
+                                      <type>zip</type>
+                                      <overWrite>false</overWrite>
+                                      <outputDirectory>${wildfly.embedded.dir}</outputDirectory>
+                                  </artifactItem>
+                              </artifactItems>
+                          </configuration>
+                      </execution>                      
+                  </executions>
+              </plugin>
             </plugins>
 	</build>
 
