--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
             <wicket.version>6.15.0</wicket.version>            
             <wildfly.version>8.0.0.Final</wildfly.version>  
             <jboss.spec.version>3.0.2.Final</jboss.spec.version>          
+            <hibernate.version>4.3.5.Final</hibernate.version>
             
             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>            
                         
@@ -63,14 +64,7 @@
                     <version>${jboss.spec.version}</version>
                     <type>pom</type>
                     <scope>import</scope>
-                </dependency>
-                <!-- Required by jboss-javaee-6.0:3.0.2.Final (https://issues.jboss.org/browse/JBBUILD-708) -->
-                <dependency>
-                    <groupId>xalan</groupId>
-                    <artifactId>xalan</artifactId>
-                    <version>2.7.1</version>
-                    <scope>provided</scope>
-                </dependency>                
+                </dependency>                                
            </dependencies>
         </dependencyManagement>
 	
@@ -91,7 +85,7 @@
                 <artifactId>wicket-extensions</artifactId>
                 <version>${wicket.version}</version>
             </dependency>   
-            
+                        
             <dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-web-6.0</artifactId>
@@ -113,6 +107,20 @@
                 <artifactId>jboss-annotations-api_1.1_spec</artifactId>                
                 <scope>provided</scope>
             </dependency>                                   
+            
+            <!-- Hibernate -->            
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+                <scope>provided</scope>
+            </dependency>            
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.178</version>
+                <scope>provided</scope>
+            </dependency>
 
             <!-- LOGGING DEPENDENCIES - LOG4J -->
             <dependency>
@@ -135,8 +143,7 @@
             </dependency>
             <dependency>
               <groupId>org.jboss.arquillian.junit</groupId>
-              <artifactId>arquillian-junit-container</artifactId>
-              <version>1.1.4.Final</version>
+              <artifactId>arquillian-junit-container</artifactId>              
               <scope>test</scope>              
             </dependency>
             <dependency>
@@ -147,20 +154,17 @@
             </dependency>
             <dependency>
               <groupId>org.jboss.shrinkwrap.resolver</groupId>
-              <artifactId>shrinkwrap-resolver-api</artifactId>
-              <version>2.1.0</version>
+              <artifactId>shrinkwrap-resolver-api</artifactId>              
               <scope>test</scope>
             </dependency>
             <dependency>
               <groupId>org.jboss.shrinkwrap.resolver</groupId>
-              <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-              <version>2.1.0</version>
+              <artifactId>shrinkwrap-resolver-impl-maven</artifactId>              
               <scope>test</scope>
             </dependency>
             <dependency>
               <groupId>org.jboss.shrinkwrap.resolver</groupId>
-              <artifactId>shrinkwrap-resolver-api-maven</artifactId>
-              <version>2.1.0</version>
+              <artifactId>shrinkwrap-resolver-api-maven</artifactId>              
               <scope>test</scope>
             </dependency>           
 	</dependencies>
