--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationClassName</param-name>
-            <param-value>cz.muni.exceptions.ExceptionsApplication</param-value>
+            <param-value>cz.muni.exceptions.web.ExceptionsApplication</param-value>
         </init-param>
     </filter>
 
