--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
                 <artifactId>wicket-extensions</artifactId>
                 <version>${wicket.version}</version>
             </dependency>   
+            <dependency>
+                <groupId>de.agilecoders.wicket</groupId>
+                <artifactId>wicket-bootstrap-core</artifactId>
+                <version>0.9.2</version>
+            </dependency>
                         
             <dependency>
                 <groupId>org.jboss.spec</groupId>
