--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
                 <groupId>de.agilecoders.wicket</groupId>
                 <artifactId>wicket-bootstrap-core</artifactId>
                 <version>0.9.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.google.guava</groupId>
+                        <artifactId>guava</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
                         
             <dependency>
@@ -126,6 +132,13 @@
                 <version>1.4.178</version>
                 <scope>provided</scope>
             </dependency>
+            
+            <!-- Guava support -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>17.0</version>
+            </dependency>                        
 
             <!-- LOGGING DEPENDENCIES - LOG4J -->
             <dependency>
