--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,9 @@
         <filter-name>wicket.web</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <context-param>
+        <param-name>configuration</param-name>
+        <param-value>development</param-value>
+    </context-param>
 </web-app>
