--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,12 @@
                 <groupId>org.apache.wicket</groupId>
                 <artifactId>wicket-extensions</artifactId>
                 <version>${wicket.version}</version>
-            </dependency>   
+            </dependency> 
+            <dependency>
+                <groupId>org.apache.wicket</groupId>                
+                <artifactId>wicket-datetime</artifactId>
+                <version>${wicket.version}</version>
+            </dependency>  
             <dependency>
                 <groupId>de.agilecoders.wicket</groupId>
                 <artifactId>wicket-bootstrap-core</artifactId>
